# ChatBot

./: .env.example  .env.production.example  .gitignore  README.md  docker-compose-production.yml  pyproject.toml  requirements-dev.txt  requirements-production.txt  requirements.txt
.agent/workflows/: test-bot.md
app/: config.py  dependencies.py  exceptions.py  logging_config.py  main.py
app/api/v1/: chat.py  health.py
app/core/: constants.py
app/mcp/: client.py  server_config.py
app/mcp/tools/: __init__.py  base.py  budget_tool.py  media_tools.py  registry.py  search.py
app/middleware/: auth.py  monitoring.py  rate_limit.py
app/models/: domain.py  schemas.py
app/services/: chat_service.py  intelligence.py  llm_service.py  mcp_orchestrator.py  media_service.py  memory_service.py  reflection_service.py
app/utils/: helpers.py
files/: COMPLETE_IMPROVEMENT_PLAN.md  QUICK_START_GUIDE.md  auth_service.py  chat_streaming.py  ci-cd-pipeline.yaml  database.py  database_models.py  kubernetes-deployment.yaml
tests/integration/: test_chat_flow.py
tests/unit/: test_intelligence.py  test_mcp.py  test_memory.py
